# angular

./: .bazelrc  package.json
.circleci/: bazel.common.rc  bazel.rc  config.yml  windows-env.ps1
.codefresh/: codefresh.yml
aio/: package.json
tools/zone.js/test/: BUILD.bazel  main.ts
