load("//tools:defaults.bzl", "jasmine_node_test", "ts_library", "ts_web_test_suite")

ts_library(
    name = "test_node_lib",
    testonly = True,
    srcs = glob(
        [
            "common/*.ts",
            "zone-spec/*.ts",
            "rxjs/*.ts",
            "node/*.ts",
            "test_fake_polyfill.ts",
            "test-util.ts",
            "wtf_mock.ts",
            "node-env-setup.ts",
            "node_entry_point.ts",
            "test-env-setup-jasmine.ts",
        ],
    ),
    deps = [
        "//tools/zone.js/lib",
        "@npm//shelljs",
        "@npm//systemjs",
        "@npm//@types/shelljs",
        "@npm//@types/systemjs",
        "@npm//rxjs",
    ],
)

jasmine_node_test(
    name = "test",
    bootstrap = [
        "angular/tools/zone.js/test/node_entry_point.js",
    ],
    deps = [
        ":test_node_lib",
    ],
)

ts_web_test_suite(
    name = "test_web",
    static_files = [
        ":static_assets/test.html",
    ],
    deps = [
        ":test_node_lib",
    ],
)
